--- a/src/style/style.css
+++ b/src/style/style.css
@@ -1,7 +1,12 @@
+* {
+  font-family: 'Roboto', sans-serif;
+
+}
+
 table, td, tr, thead, tbody, th {
   border: 1px solid #000;
   border-collapse: collapse;
 }
 td, th {
-  padding: 4px;
+  padding: 2px 4px;
 }
