--- a/src/style/style.css
+++ b/src/style/style.css
@@ -4,9 +4,17 @@
 }
 
 table, td, tr, thead, tbody, th {
-  border: 1px solid #000;
+  border: 1px solid;
   border-collapse: collapse;
 }
 td, th {
   padding: 2px 4px;
+}
+
+
+body {
+  color: rgba(255, 255, 255, 0.85);
+  background-color: #222;
+  border-color: rgba(255, 255, 255, 0.85);
+  /* this is temp so my eyes don't bleed */
 }
