--- a/src/style/style.css
+++ b/src/style/style.css
@@ -12,9 +12,10 @@ td, th {
 }
 
 
-body {
+/* body {
   color: rgba(255, 255, 255, 0.85);
   background-color: #222;
   border-color: rgba(255, 255, 255, 0.85);
+  */
   /* this is temp so my eyes don't bleed */
-}
+/* }  */
